--- a/ProjectBank/Client/Shared/NavMenu.razor
+++ b/ProjectBank/Client/Shared/NavMenu.razor
@@ -97,7 +97,7 @@
                 </div>
             </nav>
         </div>
-        <hr>
+        <hr id="nav_line">
         <br>
     </NotAuthorized>
 </AuthorizeView>
