--- a/ProjectBank/Client/Pages/Frontpage.razor
+++ b/ProjectBank/Client/Pages/Frontpage.razor
@@ -7,7 +7,7 @@
     <NotAuthorized>
         <h1>Welcome to the ProjectBank! </h1>
         <h3>You are currently not logged in and can therefore not access the rest of the ProjectBank. 
-                Please press "Log in" in the top-right corner and log in with your Microsoft Account.</h3>
+            Please press "Log in" <span id="mobile_view_txt">in the top-right corner and log in with your Microsoft Account.</span></h3>
     </NotAuthorized>
     <Authorized>
         <h1>Hello and Welcome, @context.User.Identity?.Name!</h1>
@@ -17,6 +17,12 @@
         }
     </Authorized>
 </AuthorizeView>
+ <br>
+  <div class="mobile_view_frontpage">
+      <button style="border: none; border-radius: 5px;">
+                <LoginDisplay IsMobile="true"></LoginDisplay>
+            </button>
+  </div>
 
 @code{
     private string? _name;
