--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -1,5 +1,6 @@
 @inject HttpClient _http
 @inject NavigationManager _navigationManager
+@inject DialogService _dialogService
 
 @if (IsProject)
 {
@@ -39,20 +40,34 @@ else //make a preview of profile picture.
 {
     @if (!string.IsNullOrWhiteSpace(_imageUrl))
     {
-        UploadImage();
+        <div class="form-group">
+            @if (!string.IsNullOrWhiteSpace(_imageUrl))
+            {
+                <div style="display: flex; justify-content: center; align-content: center; padding: 1em"><img src="@_imageUrl" alt="Project Image" class="img-thumbnail"></div>
+                <div style="padding: 0.5em; display: grid; grid-template-columns: 50% 50%; text-align: center">
+                    <RadzenButton style="width: 90%; text-align: center; background: linear-gradient(10deg, #fd297b, #ff655b)"
+                                  BusyText="Saving ..." IsBusy=@_busy Click=@UploadImage Text="Upload"/>
+                    <RadzenButton style="width: 90%; text-align: center; background: linear-gradient(10deg, #fd297b, #ff655b)"
+                                  IsBusy=@_busy Click=@ClearImage Text="Clear"/>
+                </div>
+            }
+        </div>
+        <div>
+            @if (_sizeExceeded)
+            {
+                <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
+            }
+        </div>
     }
-    <div>
-        @if (_sizeExceeded)
-                {
-                    <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
-                }
-    </div>
 }
 @code {
+
     [Parameter]
     public int Id { get; set; }
+
     [Parameter]
     public bool IsProject { get; set; }
+
     private ProjectDetailsDto? _toBeUpdated;
     private AccountDetailsDto? _toBeUpdatedAccount;
     private ProjectUpdateDto? _project;
@@ -67,22 +82,22 @@ else //make a preview of profile picture.
     {
         try
         {
-            if (IsProject)//if project
-        {
-            _toBeUpdated = await _http.GetFromJsonAsync<ProjectDetailsDto>($"api/Project/{Id}");
-            if (_toBeUpdated != null)
+            if (IsProject) //if project
             {
-                _project = new ProjectUpdateDto()
+                _toBeUpdated = await _http.GetFromJsonAsync<ProjectDetailsDto>($"api/Project/{Id}");
+                if (_toBeUpdated != null)
                 {
-                    Id = _toBeUpdated.Id, Degree = _toBeUpdated.Degree, Title = _toBeUpdated.Title,
-                    Description = _toBeUpdated.Description, Ects = _toBeUpdated.Ects, Keywords = _toBeUpdated.Keywords, AuthorName = _toBeUpdated.AuthorName,
-                    AuthorToken = _toBeUpdated.AuthorToken, FileUrl = _toBeUpdated.FileUrl, ImageUrl = _toBeUpdated.ImageUrl, LastUpdated = DateTime.UtcNow
-                };
+                    _project = new ProjectUpdateDto()
+                    {
+                        Id = _toBeUpdated.Id, Degree = _toBeUpdated.Degree, Title = _toBeUpdated.Title,
+                        Description = _toBeUpdated.Description, Ects = _toBeUpdated.Ects, Keywords = _toBeUpdated.Keywords, AuthorName = _toBeUpdated.AuthorName,
+                        AuthorToken = _toBeUpdated.AuthorToken, FileUrl = _toBeUpdated.FileUrl, ImageUrl = _toBeUpdated.ImageUrl, LastUpdated = DateTime.UtcNow
+                    };
+                }
             }
-        }
-        else //if account
-        {
-            _toBeUpdatedAccount = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/getBy/{Id}");
+            else //if account
+            {
+                _toBeUpdatedAccount = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/getBy/{Id}");
 
                 if (_toBeUpdatedAccount != null)
                 {
@@ -92,7 +107,7 @@ else //make a preview of profile picture.
                         SavedProjects = _toBeUpdatedAccount.SavedProjects, AzureAAdToken = _toBeUpdatedAccount.AzureAdToken
                     };
                 }
-        }
+            }
         }
         catch (Exception e)
         {
@@ -138,6 +153,7 @@ else //make a preview of profile picture.
             _busy = false;
         }
     }
+
     private async Task ClearImage()
     {
         _busy = true;
@@ -152,7 +168,7 @@ else //make a preview of profile picture.
         var uri = $"{_navigationManager.BaseUri}";
 
         _navigationManager.NavigateTo(uri);
-        
+
     }
 
     private async Task OnFileSelection(InputFileChangeEventArgs e)
@@ -174,7 +190,7 @@ else //make a preview of profile picture.
                 _sizeExceeded = true;
                 Console.WriteLine(exception);
             }
-            
+
         }
     }
-} 
+}    
