--- a/ProjectBank/Client/Shared/ImageUploader.razor
+++ b/ProjectBank/Client/Shared/ImageUploader.razor
@@ -1,12 +1,21 @@
 @inject HttpClient _http
 @inject NavigationManager _navigationManager
+@inject DialogService _dialogService
 
-@if (IsProject)
+@if (IsProject && !HasProfilePicture)
 {
     <div class="form-group input-group">
         <InputFile id="Image" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg" class="form-control"/>
     </div>
 }
+else if (!IsProject && HasProfilePicture)
+{
+    <div class="profile_no_pic" style="background-image: url('@_account?.PictureUrl')">
+        <InputFile class="img_profile_overlay" id="Image" style="display: none" OnChange="@OnFileSelection" accept=".png, .jpeg, .gif, .jpg"></InputFile>
+        <label for="Image" class="overlay"><span>Change</span></label>
+    </div>
+}
+
 else
 {
     <div class="profile_no_pic" style="background-image: url('./Unknown_profile_pic.png')">
@@ -39,20 +48,27 @@ else //make a preview of profile picture.
 {
     @if (!string.IsNullOrWhiteSpace(_imageUrl))
     {
-        UploadImage();
-    }
-    <div>
         @if (_sizeExceeded)
-                {
-                    <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
-                }
-    </div>
+            {
+                <div style="display: flex; justify-content: center; align-content: center; padding: 1em; color: red">Maximum file size of 1.24 mb exceded.</div>
+            }
+        else
+        {
+           UploadImage();
+        }
+    }
 }
 @code {
+
     [Parameter]
     public int Id { get; set; }
+
     [Parameter]
     public bool IsProject { get; set; }
+    
+    [Parameter]
+    public bool HasProfilePicture { get; set; }
+
     private ProjectDetailsDto? _toBeUpdated;
     private AccountDetailsDto? _toBeUpdatedAccount;
     private ProjectUpdateDto? _project;
@@ -67,22 +83,22 @@ else //make a preview of profile picture.
     {
         try
         {
-            if (IsProject)//if project
-        {
-            _toBeUpdated = await _http.GetFromJsonAsync<ProjectDetailsDto>($"api/Project/{Id}");
-            if (_toBeUpdated != null)
+            if (IsProject) //if project
             {
-                _project = new ProjectUpdateDto()
+                _toBeUpdated = await _http.GetFromJsonAsync<ProjectDetailsDto>($"api/Project/{Id}");
+                if (_toBeUpdated != null)
                 {
-                    Id = _toBeUpdated.Id, Degree = _toBeUpdated.Degree, Title = _toBeUpdated.Title,
-                    Description = _toBeUpdated.Description, Ects = _toBeUpdated.Ects, Keywords = _toBeUpdated.Keywords, AuthorName = _toBeUpdated.AuthorName,
-                    AuthorToken = _toBeUpdated.AuthorToken, FileUrl = _toBeUpdated.FileUrl, ImageUrl = _toBeUpdated.ImageUrl, LastUpdated = DateTime.UtcNow
-                };
+                    _project = new ProjectUpdateDto()
+                    {
+                        Id = _toBeUpdated.Id, Degree = _toBeUpdated.Degree, Title = _toBeUpdated.Title,
+                        Description = _toBeUpdated.Description, Ects = _toBeUpdated.Ects, Keywords = _toBeUpdated.Keywords, AuthorName = _toBeUpdated.AuthorName,
+                        AuthorToken = _toBeUpdated.AuthorToken, FileUrl = _toBeUpdated.FileUrl, ImageUrl = _toBeUpdated.ImageUrl, LastUpdated = DateTime.UtcNow
+                    };
+                }
             }
-        }
-        else //if account
-        {
-            _toBeUpdatedAccount = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/getBy/{Id}");
+            else //if account
+            {
+                _toBeUpdatedAccount = await _http.GetFromJsonAsync<AccountDetailsDto>($"api/Account/getBy/{Id}");
 
                 if (_toBeUpdatedAccount != null)
                 {
@@ -92,7 +108,7 @@ else //make a preview of profile picture.
                         SavedProjects = _toBeUpdatedAccount.SavedProjects, AzureAAdToken = _toBeUpdatedAccount.AzureAdToken
                     };
                 }
-        }
+            }
         }
         catch (Exception e)
         {
@@ -138,6 +154,7 @@ else //make a preview of profile picture.
             _busy = false;
         }
     }
+
     private async Task ClearImage()
     {
         _busy = true;
@@ -152,7 +169,7 @@ else //make a preview of profile picture.
         var uri = $"{_navigationManager.BaseUri}";
 
         _navigationManager.NavigateTo(uri);
-        
+
     }
 
     private async Task OnFileSelection(InputFileChangeEventArgs e)
@@ -174,7 +191,7 @@ else //make a preview of profile picture.
                 _sizeExceeded = true;
                 Console.WriteLine(exception);
             }
-            
+
         }
     }
-} 
+}    
