--- a/ProjectBank/Client/Pages/AdditionalProjectSetup.razor
+++ b/ProjectBank/Client/Pages/AdditionalProjectSetup.razor
@@ -25,7 +25,7 @@
         <div class="align-items-center d-flex col-md-3" style="text-decoration: underline;  width: 100%">
             <RadzenLabel Text="Update project image:" />
         </div>
-        <ImageUploader Id="int.Parse(Id ?? string.Empty)" IsProject="true" HasProfilePicture="false"></ImageUploader>
+        <ImageUploader Id="int.Parse(Id ?? string.Empty)" OnUpdate="UpdateComponents"></ImageUploader>
     </div>
     <br/>
     <div class="row" style="width: 100%; --bs-gutter-x: 0;">
@@ -37,7 +37,7 @@
             {
                 <div style="justify-content: center; align-content: center; padding:1em;"><a style="color: #0a53be" href="@_project.FileUrl" download="@_project.FileUrl??.pdf">Project PDF</a></div>
             }
-            <PdfUploader projectId="int.Parse(Id ?? String.Empty)"></PdfUploader>
+            <PdfUploader projectId="int.Parse(Id ?? String.Empty)" OnUpdate="UpdateComponents"></PdfUploader>
         </div>
     </div>
     <br/>
@@ -50,7 +50,7 @@
     [Parameter]
     public string? Id { get; set; }
     private ProjectDetailsDto? _project;
-
+    private string imgUrl = "";
     protected override async Task OnInitializedAsync()
     {
         _project = await _http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/{Id}");
@@ -59,5 +59,11 @@
     private void CompleteSetup()
     {
        _navigationManager.NavigateTo("/projects/"+Id);
+    }
+
+    private async Task UpdateComponents()
+    {
+        _project = await _http.GetFromJsonAsync<ProjectDetailsDto>($"/api/Project/{Id}");
+        await InvokeAsync(StateHasChanged);
     }
 }
