All except client

--- a/ProjectBank/Client/Pages/CreateProject.razor
+++ b/ProjectBank/Client/Pages/CreateProject.razor
@@ -71,7 +71,7 @@
     private ProjectCreateDto _project = new();
     private IEnumerable<string> _multipleValues = new[] {"AI"};
     private List<string> _keywords = new();
-    Enum[] _enums = {Degree.Bachelor, Degree.Master, Degree.PHD};
+    Enum[] _enums = {Degree.Bachelor, Degree.Master, Degree.Phd};
     float[] _etcs = {7.5f, 15f};
 
     protected override async Task OnInitializedAsync()
