--- a/ProjectBank/Client/Pages/EditProject.razor
+++ b/ProjectBank/Client/Pages/EditProject.razor
@@ -72,7 +72,7 @@
     private ProjectDetailsDto? _oldProject;
     private ProjectUpdateDto _project = new();
     private List<string> _keywords = new();
-    Enum[] _degrees = {Degree.Bachelor, Degree.Master, Degree.PHD};
+    Enum[] _degrees = {Degree.Bachelor, Degree.Master, Degree.Phd};
     float[] _etcs = {7.5f, 15f};
     private IEnumerable<string> _multipleValues;
     bool _busy;
